hphp/hack/test/dot_hack/dot_hack_can_not_have_header.hack.exp
File "dot_hack_can_not_have_header.hack", line 1, characters 2-2:
An expression is expected here. (Parsing[1002])
