hphp/hack/test/dot_hack/dot_hack_can_not_have_header.hack
<?hh // strict

function foo(): void {
}
